--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <!-- ================================  Menu despegable  ========================-->
         <nav class="nav-menu">
-            <a href="/principal/principal.html" target="paginas"><h1>POWERGE</h1></a>
+            <a href="./principal/principal.html" target="paginas"><h1>POWERGE</h1></a>
             <!--==============  Menu Principal ===================-->
             <ul class="menu">
                 <!--===========  APLICACIONES  ===================-->
-                <li><a href="/aplicaciones/aplicaciones.html" target="paginas">Aplicaciones</a>
+                <li><a href="./aplicaciones/aplicaciones.html" target="paginas">Aplicaciones</a>
                     <!--===  Sub Menu  ===-->
                     <ul class="sub-menu">
                         <li><a href="#" target="paginas">Data Center</a></li>
