--- a/principal/principal.html
+++ b/principal/principal.html
@@ -1,19 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="principal.css">
-    <script src="/index.js"></script>
+    <script src="../index.js"></script>
 </head>
 <body>
-    <section>
-        <h2>Productos</h2>
-    </section>
-    <section>
-        <h2>Aplicaciones</h2>
-    </section>
-    <section>
-        <h2>Servicios</h2>
-    </section>
+    <!-- Informacion Principal -->
+        <main>
+        <img src="mainPrincipal.png">
+        <!-- PRODUCTOS -->
+        <div class="divisor">
+            <h2>PRODUCTOS</h2>
+        </div>        
+        <section id="seccion1"> <!-- Carrusel -->
+            <article class="Carrusel-1"><!-- AC CRITICAL POWER-->
+                <img src="">
+                <h5>AC CRITICAL POWER</h5>
+            </article>
+            <article class="Carrusel-1"><!-- DC CRITICAL POWER-->
+                <h5>DC CRITICAL POWER</h5>
+                <img src="">
+            </article>
+            <article class="Carrusel-1"><!-- INDUSTRIAL POWER-->
+                <h5>INDUSTRIAL POWER</h5>
+                <img src="">
+            </article>
+            <article class="Carrusel-1"><!-- POWER QUALITY-->
+                <h5>POWER QUALITY</h5>
+            </article>
+            <article class="Carrusel-1"><!-- RENEWABLE POWER-->
+                <h5>RENEWABLE POWER</h5>
+            </article>
+            <article class="Carrusel-1"><!-- DATA CENTER INFRAESTRUCTURE-->
+                <h5>DATA CENTER INFRAESTRUCTURE</h5>
+            </article>
+            <article class="Carrusel-1"><!-- POWER DISTRIBUTION-->
+                <h5>POWER DISTRIBUTION</h5>
+            </article>
+            <article class="Carrusel-1"><!-- BATTERY POWER-->
+                <h5>BATTERY POWER</h5>
+            </article>
+        </section>
+        <!-- APLICACIONES -->
+        <div class="divisor">  
+            <h2>APLICACIONES</h2>
+        </div>
+        
+        <section id="seccion2"> <!-- Carrusel -->
+            <article class="Carrusel-2"><!-- Critical Power-->
+                <h5>Critical Power</h5>
+            </article>
+            <article class="Carrusel-2"><!-- Critical Power -->
+                <h5>Critical Power</h5>
+            </article>
+            <article class="Carrusel-2"><!-- INDUSTRIAL POWER-->
+                <h5>INDUSTRIAL POWER</h5>
+            </article>
+            <article class="Carrusel-2"><!-- RENEWABLE POWER-->
+                <h5>RENEWABLE POWER</h5>
+            </article>
+        </section>
+        <!-- Servicios -->
+        <div class="divisor">
+        <h2>SERVICIOS</h2>
+        </div>        
+        <section id="seccion3"> <!-- Carrusel -->
+            <article class="Carrusel-3"><!-- COMMISSIONING-->
+                <h5>COMMISSIONING</h5>
+            </article>
+            <article class="Carrusel-3"><!-- MAINTENANCE-->
+                <h5>MAINTENANCE</h5>
+            </article>
+            <article class="Carrusel-3"><!-- ANALITYCAL TEST-->
+                <h5>ANALITYCAL</h5>
+            </article>
+            <article class="Carrusel-3"><!-- REPAIR & SPARE PARTS-->
+                <h5>REPAIR & SPARE PARTS</h5>
+            </article>
+            <article class="Carrusel-3"><!-- TRAINING-->
+                <h5>TRAINING</h5>
+            </article>
+            <article class="Carrusel-3"><!-- REMOTE MONITORING-->
+                <h5>REMOTE MONITORING</h5>
+            </article>
+            <article class="Carrusel-3"><!-- OTROS SERVICIOS-->
+                <h5>OTROS SERVICIOS</h5>
+            </article>
+        </section>
+        <div class="divisor">
+            <img src="/Imagenes-index/Principal/Separador.png" class="panal">
+        </div>        
+    </section>    
+    <!--Pie de Pagina-->
+        <!--  LAS 3 FORTALEZAS -->
+        <section class="datosFortalezas"> 
+            <article class="fortalezas"><!-- PLANIFICACION & DISEÑO-->
+                <img src="planificacion&diseño.png" class="imgFooter">
+                <h5>PLANIFICACION & DISEÑO</h5>
+                <p>Preparacion de sistemas a medida para todas sus necesidades</p>
+            </article>
+            <article class="fortalezas"><!-- CONTACTO 24HS-->
+                <img src="contacto24hs.png" class="imgFooter">
+                <h5>CONTACTO 24HS</h5>
+                <p>Servicios de comunicación constante</p>
+            </article>
+            <article class="fortalezas"><!-- 24/7 SOPORTE-->
+                <img src="soporte24-7.png" class="imgFooter">
+                <h5>24/7 SOPORTE</h5>
+                <p>Soporte y atención las 24 horas y 365 dias del año</p>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
