--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                 <li><a href="./empresa/empresa.html" target="paginas">Empresa</a>
                     <!--===  Sub Menu  ===-->
                     <ul class="sub-menu">
-                        <li><a href="#">Nuestra Empresa</a></li>
-                        <li><a href="#">Nuestros Clientes</a></li>
-                        <li><a href="#">Modelo Organizativo de Gestion y Control</a></li>
-                        <li><a href="#">Calidad y Certificaciones</a></li>
-                        <li><a href="#">Descargas</a></li>
-                        <li><a href="#">Mas Informacion</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Nuestra Empresa</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Nuestros Clientes</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Modelo Organizativo de Gestion y Control</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Calidad y Certificaciones</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Descargas</a></li>
+                        <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Mas Informacion</a></li>
                     </ul>
                 </li>
                 <!--===========  CONTACTO  ===================-->               
-                <li><a href="/contacto/contacto.html" target="paginas">Contacto</a>
+                <li><a href="./contacto/contacto.html" target="paginas">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -171,27 +171,27 @@
     <footer>        
         <section class="footer-izquierda">
             <ul>Aplicaciones 
-                <li><a href="#">Critical Power UPS for ICT y Data Center</a></li>
-                <li><a href="#">Critical Power UPS para Industrias y Servicios</a></li>
-                <li><a href="#">Industrial Power</a></li>
-                <li><a href="#">Renewable Power</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Critical Power UPS for ICT y Data Center</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Critical Power UPS para Industrias y Servicios</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Industrial Power</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Renewable Power</a></li>
             </ul>
             <ul>Productos
-                <li><a href="#">Energía crítica monofásica para ICT</a></li>
-                <li><a href="#">Energía crítica trifásica para ICT</a></li>
-                <li><a href="#">Energía crítica trifásica para industria y servicios</a></li>
-                <li><a href="#">Sistema UPSaver</a></li>
-                <li><a href="#">Energía industrial</a></li>
-                <li><a href="#">Energía renovable</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Energía crítica monofásica para ICT</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Energía crítica trifásica para ICT</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Energía crítica trifásica para industria y servicios</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Sistema UPSaver</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Energía industrial</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Energía renovable</a></li>
             </ul>
             <ul>Servicios
-                <li><a href="#">Planificación, instalación, puesta en marcha</a></li>
-                <li><a href="#">Mantenimiento</a></li>
-                <li><a href="#">Pruebas analíticas</a></li>
-                <li><a href="#">Monitorización y sustitución de baterías</a></li>
-                <li><a href="#">Repuestos y reparación</a></li>
-                <li><a href="#">Capacitación</a></li>
-                <li><a href="#">Reequipamiento</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Planificación, instalación, puesta en marcha</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Mantenimiento</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Pruebas analíticas</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Monitorización y sustitución de baterías</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Repuestos y reparación</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Capacitación</a></li>
+                <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Reequipamiento</a></li>
             </ul>
         </section>
         <section class="footer-derecha">
