--- a/mantenimiento/mantenimiento.html
+++ b/mantenimiento/mantenimiento.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>mantenimiento </h1>
-        <!--<img src="desarrollo.png" alt="">-->
+        <img src="desarrollo.png" alt="">
         <p>¡Próximamente disponible!</p>
         <p>Estamos trabajando para brindarte la mejor experiencia. 
             Esta sección está en desarrollo y muy pronto encontrarás 
