--- a/principal/principal.html
+++ b/principal/principal.html
@@ -15,14 +15,16 @@
         </div>        
         <section id="seccion1"> <!-- Carrusel -->
             <article class="Carrusel-1"><!-- AC CRITICAL POWER-->
-                <img src="">
+                <img src="AC-critical-power.png">
                 <h5>AC CRITICAL POWER</h5>
             </article>
             <article class="Carrusel-1"><!-- DC CRITICAL POWER-->
+                <img src="DC-critical-power.png" alt="">
                 <h5>DC CRITICAL POWER</h5>
                 <img src="">
             </article>
             <article class="Carrusel-1"><!-- INDUSTRIAL POWER-->
+                <img src="energia-industrial.png" alt="">
                 <h5>INDUSTRIAL POWER</h5>
                 <img src="">
             </article>
@@ -30,15 +32,19 @@
                 <h5>POWER QUALITY</h5>
             </article>
             <article class="Carrusel-1"><!-- RENEWABLE POWER-->
+                <img src="energia-renovable.png" alt="">
                 <h5>RENEWABLE POWER</h5>
             </article>
             <article class="Carrusel-1"><!-- DATA CENTER INFRAESTRUCTURE-->
+                <img src="data-center.png" alt="">
                 <h5>DATA CENTER INFRAESTRUCTURE</h5>
             </article>
             <article class="Carrusel-1"><!-- POWER DISTRIBUTION-->
+                <img src="distribucion-de-energia.png" alt="">
                 <h5>POWER DISTRIBUTION</h5>
             </article>
             <article class="Carrusel-1"><!-- BATTERY POWER-->
+                <img src="bateria.png" alt="">
                 <h5>BATTERY POWER</h5>
             </article>
         </section>
@@ -67,30 +73,34 @@
         </div>        
         <section id="seccion3"> <!-- Carrusel -->
             <article class="Carrusel-3"><!-- COMMISSIONING-->
+                <img src="" alt="">
                 <h5>COMMISSIONING</h5>
             </article>
             <article class="Carrusel-3"><!-- MAINTENANCE-->
+                <img src="" alt="">
                 <h5>MAINTENANCE</h5>
             </article>
             <article class="Carrusel-3"><!-- ANALITYCAL TEST-->
+                <img src="" alt="">
                 <h5>ANALITYCAL</h5>
             </article>
             <article class="Carrusel-3"><!-- REPAIR & SPARE PARTS-->
+                <img src="" alt="">
                 <h5>REPAIR & SPARE PARTS</h5>
             </article>
             <article class="Carrusel-3"><!-- TRAINING-->
+                <img src="" alt="">
                 <h5>TRAINING</h5>
             </article>
             <article class="Carrusel-3"><!-- REMOTE MONITORING-->
+                <img src="" alt="">
                 <h5>REMOTE MONITORING</h5>
             </article>
             <article class="Carrusel-3"><!-- OTROS SERVICIOS-->
+                <img src="" alt="">
                 <h5>OTROS SERVICIOS</h5>
             </article>
-        </section>
-        <div class="divisor">
-            <img src="/Imagenes-index/Principal/Separador.png" class="panal">
-        </div>        
+        </section>        
     </section>    
     <!--Pie de Pagina-->
         <!--  LAS 3 FORTALEZAS -->
@@ -112,5 +122,10 @@
             </article>
         </section>
     </main>
+    <script>
+    window.onload = function() {
+        window.scrollTo(0, 0);
+    };
+</script>
 </body>
 </html>
