--- a/principal/principal.html
+++ b/principal/principal.html
@@ -10,7 +10,7 @@
         <main>
         <img src="mainPrincipal.png">
         <!-- PRODUCTOS -->
-        <div class="divisor">
+       <div class="divisor">
             <h2>PRODUCTOS</h2>
         </div>        
         <section id="seccion1"> <!-- Carrusel -->
@@ -55,16 +55,23 @@
         
         <section id="seccion2"> <!-- Carrusel -->
             <article class="Carrusel-2"><!-- Critical Power-->
+                <img src="aplicaciones-data-center.png" alt="">
                 <h5>Critical Power</h5>
+                <h5>Data Center</h5>
             </article>
             <article class="Carrusel-2"><!-- Critical Power -->
+                <img src="aplicaciones-salud.png" alt="">
                 <h5>Critical Power</h5>
+                <h5>Rubro de Salud</h5>
             </article>
             <article class="Carrusel-2"><!-- INDUSTRIAL POWER-->
+                <img src="aplicaciones-energia-industrial.png" alt="">
                 <h5>INDUSTRIAL POWER</h5>
             </article>
             <article class="Carrusel-2"><!-- RENEWABLE POWER-->
+                <img src="aplicaciones-energia-renovable.png" alt="">
                 <h5>RENEWABLE POWER</h5>
+                <h5>Energia Renovables</h5>
             </article>
         </section>
         <!-- Servicios -->
@@ -101,7 +108,7 @@
                 <h5>OTROS SERVICIOS</h5>
             </article>
         </section>        
-    </section>    
+    </section>
     <!--Pie de Pagina-->
         <!--  LAS 3 FORTALEZAS -->
         <section class="datosFortalezas"> 
