--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <li><a href="./mantenimiento/mantenimiento.html" target="paginas">Mas Informacion</a></li>
                         </ul>
                     </li>
-                    <li><a href="/contacto/contacto.html" target="paginas">Contacto</a>
+                    <li><a href="./contacto/contacto.html" target="paginas">Contacto</a>
                     </li>
                 </ul>
             </div>
